WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114962
Cancelling load may cause deadlock in -[AVPlayerItem release]
https://bugs.webkit.org/show_bug.cgi?id=114962
Summary
Cancelling load may cause deadlock in -[AVPlayerItem release]
Jer Noble
Reported
2013-04-22 09:06:05 PDT
Cancelling load may cause deadlock in -[AVPlayerItem release]
Attachments
Patch
(3.29 KB, patch)
2013-04-22 11:26 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-04-22 11:26:29 PDT
Created
attachment 199051
[details]
Patch
Eric Carlson
Comment 2
2013-04-22 11:42:11 PDT
Comment on
attachment 199051
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=199051&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:1627 > + if (!m_callback->shouldWaitForLoadingOfResource(loadingRequest))
This should check to make sure m_callback is not NULL.
Jer Noble
Comment 3
2013-04-22 12:17:26 PDT
<
rdar://problem/13706310
>
Jer Noble
Comment 4
2013-04-22 13:02:06 PDT
Committed
r148906
: <
http://trac.webkit.org/changeset/148906
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug